testcaseの整形