@@ -9,7 +9,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.DriverManager;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -208,7 +207,7 @@ public class AbstractDbTest {
 	 * @param tables truncateするテーブル名（複数指定可）
 	 */
 	protected void truncateTable(final Object... tables) {
-		Arrays.asList(tables).stream().forEach(tbl -> {
+		List.of(tables).stream().forEach(tbl -> {
 			try {
 				agent.updateWith("truncate table " + tbl.toString()).count();
 			} catch (Exception ex) {
