@@ -4,7 +4,7 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.sql.DriverManager;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -33,62 +33,62 @@ public class SecretColumnEventSubscriberInitializeTest {
 		config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		assertThat(eventSubscriber.isSkip(), is(true));
 
-		eventSubscriber.setCryptColumnNames(Arrays.asList());
+		eventSubscriber.setCryptColumnNames(List.of());
 		config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 		config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		assertThat(eventSubscriber.isSkip(), is(true));
 
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
-		eventSubscriber.setCryptParamKeys(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
+		eventSubscriber.setCryptParamKeys(List.of("product_id", "product_name"));
 		config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 		config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
-		assertThat(eventSubscriber.getCryptParamKeys(), is(Arrays.asList("productId", "productName")));
-		assertThat(eventSubscriber.getCryptColumnNames(), is(Arrays.asList("PRODUCT_ID", "PRODUCT_NAME")));
+		assertThat(eventSubscriber.getCryptParamKeys(), is(List.of("productId", "productName")));
+		assertThat(eventSubscriber.getCryptColumnNames(), is(List.of("PRODUCT_ID", "PRODUCT_NAME")));
 	}
 
 	@Test
 	void testInitialize02() throws Exception {
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
 		var log = TestAppender.getLogbackLogs(() -> {
 			eventSubscriber.setKeyStoreFilePath(null);
 			config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 			config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		});
-		assertThat(log, is(Arrays.asList("Invalid KeyStore file path. Path:null")));
+		assertThat(log, is(List.of("Invalid KeyStore file path. Path:null")));
 		assertThat(eventSubscriber.isSkip(), is(true));
 	}
 
 	@Test
 	void testInitialize03() throws Exception {
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
 		var log = TestAppender.getLogbackLogs(() -> {
 			eventSubscriber.setKeyStoreFilePath(
 					"src/test/resources/data/expected/SecretColumnEventSubscriber/fake.jks");
 			config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 			config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		});
-		assertThat(log, is(Arrays.asList(
+		assertThat(log, is(List.of(
 				"Not found KeyStore file path. Path:src/test/resources/data/expected/SecretColumnEventSubscriber/fake.jks")));
 		assertThat(eventSubscriber.isSkip(), is(true));
 	}
 
 	@Test
 	void testInitialize04() throws Exception {
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
 		var log = TestAppender.getLogbackLogs(() -> {
 			eventSubscriber.setKeyStoreFilePath(
 					"src/test/resources/data/expected/SecretColumnEventSubscriber");
 			config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 			config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		});
-		assertThat(log, is(Arrays.asList(
+		assertThat(log, is(List.of(
 				"Invalid KeyStore file path. Path:src/test/resources/data/expected/SecretColumnEventSubscriber")));
 		assertThat(eventSubscriber.isSkip(), is(true));
 	}
 
 	@Test
 	void testInitialize05() throws Exception {
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
 		var log = TestAppender.getLogbackLogs(() -> {
 			// 下記コマンドでkeystoreファイル生成
 			// keytool -genseckey -keystore C:\keystore.jceks -storetype JCEKS -alias testexample
@@ -99,14 +99,14 @@ public class SecretColumnEventSubscriberInitializeTest {
 			config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 			config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		});
-		assertThat(log, is(Arrays.asList(
+		assertThat(log, is(List.of(
 				"Invalid password for access KeyStore.")));
 		assertThat(eventSubscriber.isSkip(), is(true));
 	}
 
 	@Test
 	void testInitialize06() throws Exception {
-		eventSubscriber.setCryptColumnNames(Arrays.asList("product_id", "product_name"));
+		eventSubscriber.setCryptColumnNames(List.of("product_id", "product_name"));
 		var log = TestAppender.getLogbackLogs(() -> {
 			// 下記コマンドでkeystoreファイル生成
 			// keytool -genseckey -keystore C:\keystore.jceks -storetype JCEKS -alias testexample
@@ -118,7 +118,7 @@ public class SecretColumnEventSubscriberInitializeTest {
 			config.getEventListenerHolder().removeEventSubscriber(eventSubscriber);
 			config.getEventListenerHolder().addEventSubscriber(eventSubscriber);
 		});
-		assertThat(log, is(Arrays.asList("No alias for access KeyStore.")));
+		assertThat(log, is(List.of("No alias for access KeyStore.")));
 		assertThat(eventSubscriber.isSkip(), is(true));
 	}
 }
