@@ -9,8 +9,8 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -46,7 +46,7 @@ public abstract class AbstractExpressionParserTest {
 	public void setUp() throws Exception {
 		sqlConfig = UroboroSQL.builder(DriverManager.getConnection("jdbc:h2:mem:" + this.getClass().getSimpleName()))
 				.setExecutionContextProvider(new ExecutionContextProviderImpl()
-						.setEnumConstantPackageNames(Arrays.asList(TestEnum1.class.getPackage().getName())))
+						.setEnumConstantPackageNames(List.of(TestEnum1.class.getPackage().getName())))
 				.setExpressionParser(getExpressionParser())
 				.build();
 
