@@ -9,8 +9,8 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import java.sql.DriverManager;
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -113,7 +113,8 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 				var test3 = new TestEntity(3L, "name3", 22, LocalDate.of(1990, Month.MAY, 1), Optional.empty());
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity.class).collect();
+				var list = agent.query(TestEntity.class)
+						.collect();
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
@@ -141,155 +142,183 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 				var test3 = new TestEntity(3L, "name3", 20, LocalDate.of(1990, Month.JUNE, 1), Optional.empty());
 				agent.insert(test3);
 
-				var list = agent.query(TestEntity.class).equal("id", 2).collect();
+				var list = agent.query(TestEntity.class).equal("id", 2)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test2));
 
 				// Not Equal
-				list = agent.query(TestEntity.class).notEqual("id", 2).collect();
+				list = agent.query(TestEntity.class).notEqual("id", 2)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test3));
 
 				// Greater Than
-				list = agent.query(TestEntity.class).greaterThan("age", 21).collect();
+				list = agent.query(TestEntity.class).greaterThan("age", 21)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test1));
 
 				// Greater Equal
-				list = agent.query(TestEntity.class).greaterEqual("age", 21).collect();
+				list = agent.query(TestEntity.class).greaterEqual("age", 21)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
 				// Less Than
-				list = agent.query(TestEntity.class).lessThan("age", 21).collect();
+				list = agent.query(TestEntity.class).lessThan("age", 21)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// Greater Equal
-				list = agent.query(TestEntity.class).lessEqual("age", 21).collect();
+				list = agent.query(TestEntity.class).lessEqual("age", 21)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test2));
 				assertThat(list.get(1), is(test3));
 
 				// In (array)
-				list = agent.query(TestEntity.class).in("id", 1, 2).collect();
+				list = agent.query(TestEntity.class).in("id", 1, 2)
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
 				// In (list)
-				list = agent.query(TestEntity.class).in("id", Arrays.asList(2, 3)).collect();
+				list = agent.query(TestEntity.class).in("id", List.of(2, 3))
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test2));
 				assertThat(list.get(1), is(test3));
 
 				// Not In (array)
-				list = agent.query(TestEntity.class).notIn("id", 1, 2).collect();
+				list = agent.query(TestEntity.class).notIn("id", 1, 2)
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// Not In (list)
-				list = agent.query(TestEntity.class).notIn("id", Arrays.asList(2, 3)).collect();
+				list = agent.query(TestEntity.class).notIn("id", List.of(2, 3))
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test1));
 
 				// Like
-				list = agent.query(TestEntity.class).like("name", "name3").collect();
+				list = agent.query(TestEntity.class).like("name", "name3")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// Like with wildcards (_)
-				list = agent.query(TestEntity.class).like("name", "n_me_").collect();
+				list = agent.query(TestEntity.class).like("name", "n_me_")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// Like with wildcards (%)
-				list = agent.query(TestEntity.class).like("name", "name%").collect();
+				list = agent.query(TestEntity.class).like("name", "name%")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// startsWith
-				list = agent.query(TestEntity.class).startsWith("name", "name").collect();
+				list = agent.query(TestEntity.class).startsWith("name", "name")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// startsWith wildcards
-				list = agent.query(TestEntity.class).startsWith("name", "%ame").collect();
+				list = agent.query(TestEntity.class).startsWith("name", "%ame")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// endsWith
-				list = agent.query(TestEntity.class).endsWith("name", "3").collect();
+				list = agent.query(TestEntity.class).endsWith("name", "3")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// endsWith wildcards
-				list = agent.query(TestEntity.class).endsWith("name", "%3").collect();
+				list = agent.query(TestEntity.class).endsWith("name", "%3")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// contains
-				list = agent.query(TestEntity.class).contains("name", "me").collect();
+				list = agent.query(TestEntity.class).contains("name", "me")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
-				list = agent.query(TestEntity.class).contains("name", "%me_").collect();
+				list = agent.query(TestEntity.class).contains("name", "%me_")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// Not Like
-				list = agent.query(TestEntity.class).notLike("name", "name3").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name3")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
 				// Not Like with wildcards (_)
-				list = agent.query(TestEntity.class).notLike("name", "name_").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name_")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// Not Like with wildcards (%)
-				list = agent.query(TestEntity.class).notLike("name", "name%").collect();
+				list = agent.query(TestEntity.class).notLike("name", "name%")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// notStartsWith
-				list = agent.query(TestEntity.class).notStartsWith("name", "name").collect();
+				list = agent.query(TestEntity.class).notStartsWith("name", "name")
+						.collect();
 				assertThat(list.size(), is(0));
 
 				// notStartsWith wildcards
-				list = agent.query(TestEntity.class).notStartsWith("name", "%name").collect();
+				list = agent.query(TestEntity.class).notStartsWith("name", "%name")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// notEndsWith
-				list = agent.query(TestEntity.class).notEndsWith("name", "3").collect();
+				list = agent.query(TestEntity.class).notEndsWith("name", "3")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 
 				// notEndsWith wildcards
-				list = agent.query(TestEntity.class).notEndsWith("name", "%3").collect();
+				list = agent.query(TestEntity.class).notEndsWith("name", "%3")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
 				assertThat(list.get(2), is(test3));
 
 				// notContains
-				list = agent.query(TestEntity.class).notContains("name", "2").collect();
+				list = agent.query(TestEntity.class).notContains("name", "2")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test3));
 
 				// notContains wildcards
-				list = agent.query(TestEntity.class).notContains("name", "_2").collect();
+				list = agent.query(TestEntity.class).notContains("name", "_2")
+						.collect();
 				assertThat(list.size(), is(3));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
@@ -309,12 +338,14 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 				assertThat(list.get(1), is(test2));
 
 				// is null
-				list = agent.query(TestEntity.class).isNull("memo").collect();
+				list = agent.query(TestEntity.class).isNull("memo")
+						.collect();
 				assertThat(list.size(), is(1));
 				assertThat(list.get(0), is(test3));
 
 				// is not null
-				list = agent.query(TestEntity.class).isNotNull("memo").collect();
+				list = agent.query(TestEntity.class).isNotNull("memo")
+						.collect();
 				assertThat(list.size(), is(2));
 				assertThat(list.get(0), is(test1));
 				assertThat(list.get(1), is(test2));
@@ -536,8 +567,11 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 			var sql = ctx.getSql();
 			assertThat(sql, containsString("IF memo != null"));
 
-			ctx.param("id", 1).param("name", "name1").param("age", 20)
-					.param("birthday", LocalDate.of(1990, Month.APRIL, 1)).param("memo", Optional.of("memo1"));
+			ctx.param("id", 1)
+					.param("name", "name1")
+					.param("age", 20)
+					.param("birthday", LocalDate.of(1990, Month.APRIL, 1))
+					.param("memo", Optional.of("memo1"));
 			assertThat(agent.update(ctx), is(1));
 		}
 	}
@@ -554,8 +588,11 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 			var sql = ctx.getSql();
 			assertThat(sql, not(containsString("SF.isNotEmpty")));
 
-			ctx.param("id", 1).param("name", "name1").param("age", 20)
-					.param("birthday", LocalDate.of(1990, Month.APRIL, 1)).param("memo", Optional.of("memo1"));
+			ctx.param("id", 1)
+					.param("name", "name1")
+					.param("age", 20)
+					.param("birthday", LocalDate.of(1990, Month.APRIL, 1))
+					.param("memo", Optional.of("memo1"));
 			assertThat(agent.update(ctx), is(1));
 
 			handler.setEmptyStringEqualsNull(true);
@@ -579,9 +616,11 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 			var sql = ctx.getSql();
 			assertThat(sql, containsString("IF memo != null"));
 
-			ctx.param("id", 1).param("name", "updatename");
+			ctx.param("id", 1)
+					.param("name", "updatename");
 			assertThat(agent.update(ctx), is(1));
-			assertThat(agent.query(TestEntity.class).equal("id", 1).first().orElse(null).getName(), is("updatename"));
+			assertThat(agent.query(TestEntity.class).equal("id", 1)
+					.first().orElse(null).getName(), is("updatename"));
 		}
 	}
 
@@ -600,7 +639,8 @@ public class DefaultEntityHandlerMultiColumnCommentTest {
 			var ctx = handler.createDeleteContext(agent, metadata, null, true);
 			ctx.param("id", 1);
 			assertThat(agent.update(ctx), is(1));
-			assertThat(agent.query(TestEntity.class).equal("id", 1).first().orElse(null), is(nullValue()));
+			assertThat(agent.query(TestEntity.class).equal("id", 1)
+					.first().orElse(null), is(nullValue()));
 		}
 	}
 
